<resources>
    <string name="app_name">WeatherApp</string>

    <string name="default_city">Belfast</string>

    <string name="current_condition">Current Condition :</string>
    <string name="temperature">Temperature :</string>
    <string name="wind_speed">Wind Speed :</string>
    <string name="wind_direction">Wind Direction :</string>

    <string name="example_current_condition">Windy</string>
    <string name="example_temperature">1&#xb0;C</string>
    <string name="example_wind_speed">20mph</string>
    <string name="example_wind_direction">North East</string>
    <string name="current_condition_image">Current Condition Image</string>

    <string name="formatted_wind_speed">"%1$smph"</string>
    <string name="formatted_temperature">"%1$s&#xb0;C"</string>

    <string name="no_internet_connection">No internet connection. Please connect and try again.</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>

    <string name="progress_spinner_image">Progress Spinner Image</string>

    <string name="error">Error.\n\nPlease check your internet connection and try again.</string>
    <string name="refresh_button">Refresh Button</string>

    <string name="last_updated">"Last updated: %1$s"</string>
    <string name="location">"Location: %1$s"</string>

    <string name="weather_icon_url">""https://openweathermap.org/img/w/%1$s.png""</string>

    <string name="enable_gps">Enable your GPS and restart!</string>
    <string name="location_permission">Location Permission</string>
    <string name="access_location_message">This application requires access to your location to function!</string>
    <string name="no">No</string>
    <string name="ask_me">Ask me</string>
    <string name="gps_required_message">GPS is required for this application to function!</string>

    <string name="no_data_image">No data image</string>
    <string name="no_data">No Data Available</string>
    <string name="no_data_message">Check your internet connection &amp; location services and try again</string>
    <string name="permissions_dialog_title">Permissions Required</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_settings">Go to settings?</string>
    <string name="permissions_dialog_message">This app needs location permissions. You can grant them in app settings.</string>
</resources>