<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ui_wrapper_no_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/layout_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_empty"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/no_data_image"
            android:src="@drawable/no_data_icon" />

        <TextView
            android:id="@+id/no_content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.015"
            android:lineSpacingMultiplier="1.38"
            android:text="@string/no_data"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/no_content_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.025"
            android:lineHeight="20sp"
            android:lineSpacingMultiplier="1.43"
            android:padding="0dp"
            android:text="@string/no_data_message"
            android:textColor="@color/grey_text"
            android:textSize="14sp"
            android:visibility="visible"
            tools:targetApi="p" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

